--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 <body>
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
-        <ul class="nav-links">
+        <!-- <ul class="nav-links">
             <li><a href="#">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Gallery</a></li>
             <li><a href="#">Contact</a></li>
-        </ul>
+        </ul> -->
     </div>
 
     <!-- Hero section -->
