--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
 
-        <button>
+        <button class="nav-toggle">
             <span class="ham--icon"></span>
         </button>
         <ul class="nav-links">
