--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
             <span class="ham--icon"></span>
         </button>
         <ul class="nav-links">
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#" class="nav__link">Home</a></li>
+            <li><a href="#" class="nav__link">About</a></li>
+            <li><a href="#" class="nav__link">Gallery</a></li>
+            <li><a href="#" class="nav__link">Contact</a></li>
         </ul>
     </div>
 
@@ -107,5 +107,7 @@
         </div>
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
+
+    <script src="./main.js"></script>
 </body>
 </html>
