commit x ham-icon

--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
     <div class="nav-bar">
         <div class="logo">Snapshot</div>
 
-        <button class="nav-toggle">
-            <span class="ham--icon"></span>
-        </button>
+
+        <nav class="header__nav">
+        <div class="hamburger-icon">
+            <div class="line one"></div>
+            <div class="line two"></div>
+            <div class="line three"></div>
+        </div>
+        
         <ul class="nav-links">
-            <li><a href="#" class="nav__link">Home</a></li>
-            <li><a href="#" class="nav__link">About</a></li>
-            <li><a href="#" class="nav__link">Gallery</a></li>
-            <li><a href="#" class="nav__link">Contact</a></li>
+            <li class="nav-item"><a href="#" class="nav__link">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav__link">About</a></li>
+            <li class="nav-item"><a href="#" class="nav__link">Gallery</a></li>
+            <li class="nav-item"><a href="#" class="nav__link">Contact</a></li>
         </ul>
+        </nav>
     </div>
 
     <!-- Hero section -->
@@ -108,6 +114,6 @@
         <h6>Copyright &copy; 2021 Zuri Training.</h6>
     </div>
 
-    <script src="./main.js"></script>
+    <script src="./JS/main.js"></script>
 </body>
 </html>
